[package]
name = "bevy_mod_async"
version = "0.5.0"
authors = ["Josh Hyatt <joshua.n.hyatt@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ergonomic async tasks plugin for the Bevy game engine"
repository = "https://github.com/jnhyatt/bevy_mod_async"
keywords = ["gamedev", "tasks", "async", "bevy"]

[dependencies]
bevy_app = "0.13"
bevy_asset = "0.13"
bevy_ecs = "0.13"
bevy_tasks = "0.13"
futures = "0.3"
tokio = { version = "1.36.0", features = ["sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }

[dev-dependencies]
bevy = "0.13"

[[example]]
name = "hello_world"

[[example]]
name = "async_asset"
