[package]
name = "bevy_mod_async"
version = "0.9.0"
authors = ["Josh Hyatt <joshua.n.hyatt@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ergonomic async tasks plugin for the Bevy game engine"
repository = "https://github.com/jnhyatt/bevy_mod_async"
keywords = ["gamedev", "tasks", "async", "bevy"]

[dependencies]
bevy_app = "0.16"
bevy_asset = { version = "0.16", optional = true }
bevy_ecs = "0.16"
bevy_tasks = "0.16"
bevy_time = { version = "0.16", optional = true }
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[features]
default = ["asset", "time"]
asset = ["bevy_asset"]
time = ["bevy_time"]

[dev-dependencies]
bevy = "0.16"

[[example]]
name = "hello_world"

[[example]]
name = "async_asset"
required-features = ["asset"]

[[example]]
name = "timers"
required-features = ["time"]
